# ecommerce-practice

./: .coderabbit.yaml  .env.example  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/django-drf/: .gitignore  Makefile  manage.py  pyproject.toml  stack.env
backend/django-drf/ecommerce/: asgi.py  middleware.py  runner.py  settings.py
backend/django-drf/tests/: test_setup.py
backend/django-drf/user/: admin.py  apps.py
django-drf/: pyproject.toml
django-drf/ecommerce/: settings.py  urls.py  wsgi.py
specs/: README.md  api.md  background-processing.md  chat.md  contract.md  domain-model.md  frontend.md  notifications.md  openapi.yaml  orchestration.md  phases.md  security.md  test-suite.md  websocket.md
specs/contract/: common.tsp  main.tsp  notifications.tsp  package-lock.json  package.json  products.tsp  tspconfig.yaml  websocket.tsp  ws-events.yaml
specs/schemas/: ErrorCode.json  ErrorEnvelope.json  Notification.json  NotificationType.json  PageMeta.json  Product.json  ProductStatus.json  WsNotificationCreated.json  WsOrderStatusChanged.json  WsServerEvent.json
