[project]
name = "django-drf"
version = "0.1.0"
description = ""
authors = [
    {name = "Joseph",email = "joseph@josefyu.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (==5.2.15)",
    "djangorestframework (==3.17.1)",
    "django-filter (==25.2)",
    "psycopg (==3.3.4)",
    "django-storages[s3] (==1.14.6)",
    "django-cors-headers (==4.9.0)"
]

[project.scripts]
manage = "manage"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.3,<0.15.0)",
    "django-types (>=0.22.0,<0.23.0)",
    "django-stubs-ext (>=5.2.7,<6.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "django-stubs (>=5.2.7,<6.0.0)",
    "djangorestframework-stubs (>=3.16.5,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poe.tasks.mypy]
cmd = "mypy --install-types --check-untyped-defs ."

[tool.poe.tasks.pylint]
cmd = "pylint tests djpoe/djpoe"

[tool.poe.tasks.ruff]
cmd = "ruff check ."

[tool.poe.tasks.check]
sequence = ["mypy", "ruff"]

[tool.poe.tasks.format]
cmd = "ruff format ."

[tool.poe.tasks.dev]
help = "Run development server."
cmd = "python ./manage.py runserver 127.0.0.1:8001"

[tool.poe.tasks.makemigrations]
help = "Generate new migrations."
cmd = "python ./manage.py makemigrations"

[tool.poe.tasks.migrate]
help = "Migrate existing migrations."
cmd = "python ./manage.py migrate"

[tool.poe.tasks.manage]
cmd = "python ./manage.py"

[tool.ruff]
exclude = [
    ".direnv",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "node_modules",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "ISC001",
    "D203",
    "D213",
    "TRY003",
    "EM101",
    "D106", # Django/DRF `Meta` inner classes don't need docstrings
]
select = [
    "ANN", # flake8-annotations
    "ARG", # flake8-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "DJ",  # flake8-django
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle
    "EM",  # flake8-errmsg
    "F",   # flake8
    "G",   # flake8-logging-format
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # ruff-specific rules
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "T10", # flake8-print
    "TC",  # flake8-type-checking
    "TRY", # tryceratops
    "UP",  # pyupgrade
]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
# Django's TestCase uses unittest-style assertions (self.assertEqual / assertRaises).
"tests/*" = ["D", "ANN", "PT009", "PT027"]
"__init__.py" = ["D"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = ["fixme", "too-many-arguments"]
load-plugins = ["pylint_per_file_ignores", "pylint_django"]
django-settings-module = "djpoe.settings"
per-file-ignores = """
    /tests/:missing-function-docstring,assignment-from-no-return,not-context-manager,django-not-configured,imported-auth-user,missing-module-docstring
    /migrations/:invalid-name,missing-class-docstring,wrong-import-order
    models.py:too-many-ancestors
    manage.py:import-outside-toplevel
"""

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
# Treat the project root as the single package base so every file gets one
# unambiguous module name (e.g. common/models.py → common.models).
mypy_path = "."
explicit_package_bases = true
namespace_packages = true

[tool.django-stubs]
django_settings_module = "ecommerce.settings"
ignore_missing_model_attributes = true